feat: make OAuth auth and HTTPS/domain optional for flexible deployment

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,7 +4,12 @@ USDA_API_KEY=your_api_key_here
 # Server port (default: 3000)
 PORT=3000
 
+# Enable OAuth 2.1 authentication on /mcp routes (default: false).
+# Set to "true" to require bearer tokens. When false, /mcp routes are open.
+AUTH_ENABLED=false
+
 # Public-facing URL of the server, used as the OAuth 2.1 issuer identifier.
+# Only relevant when AUTH_ENABLED=true.
 # Defaults to http://localhost:3000 for local development.
 # Must use https in production.
 ISSUER_URL=http://localhost:3000
