--- a/mise.toml
+++ b/mise.toml
@@ -7,6 +7,7 @@ node = "24.11.0"
 [env]
 NODE_ENV = "development"
 _.path = ["{{config_root}}/server/node_modules/.bin"]
+_.file = "server/.env"
 
 [tasks.build]
 description = "Compile TypeScript"
@@ -60,3 +61,7 @@ description = "Run all quality checks (lint, format, type-check)"
 depends = ["lint", "format", "type-check"]
 run = "echo 'All quality checks passed'"
 dir = "server"
+
+[tasks.deploy]
+description = "Open GitHub Actions deploy workflow in browser"
+run = "open \"$(gh browse --no-browser -n)/actions/workflows/deploy.yml\""
